# FileStorageBlockchain

./: CMakeLists.txt  ReadMe.md
include/: Block.hpp  BlockChain.hpp  BlockChainAlgo.hpp  Deserializer.hpp  File.hpp  Gui.hpp  Hash.hpp  Transaction.hpp
src/: Block.cpp  BlockChain.cpp  BlockChainAlgo.cpp  Deserializer.cpp  File.cpp  Gui.cpp  Hash.cpp  main.cpp
